Fix survey delete button position on small screens

--- a/app/client/surveys/surveys.styl
+++ b/app/client/surveys/surveys.styl
@@ -1,5 +1,5 @@
 .controls
-  max-width 20px
+  width 80px
 
 #tableFilter
   width 300px
